--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,22 +1,18 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
+        linkvalue_provider:
+            id: Olivmai\LinkvalueOAuth2Bundle\Security\User\LinkvalueUserProvider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+            pattern: ^/
+            anonymous:
+            guard:
+                authenticators:
+                    - Olivmai\LinkvalueOAuth2Bundle\Security\Authenticator\LinkvalueAuthenticator
+            provider: linkvalue_provider
+            logout:
+                path: app_logout
+                target: login
