--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "acorn": "^6.4.1",
         "bootstrap": "^4.4.1",
+        "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "minimist": "^1.2.2",
